ninja -> ninja-build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 install:
-  - sudo apt-get install build-essential cmake git ninja
+  - sudo apt-get install build-essential cmake git ninja-build
   - sudo ./install-deps.sh
 
 script:
   - make build
   - make test
+
+after_success: 
+  - bash <(curl -s https://codecov.io/bash)
